--- a/index.html
+++ b/index.html
@@ -40,26 +40,26 @@
       <div class="form">
         <div>
           <label for="cardholder" class="font-small darkViolet">CARDHOLDER NAME</label>
-          <input type="text" name="cardholder" onkeypress="return event.charCode >= 97 && event.charCode <= 122 || event.charCode >= 65 &&  event.charCode <= 90 ||  event.charCode == 32 || event.charCode == 39 || event.charCode == 46 || event.charCode == 44 || event.charCode == 96" placeholder="e.g. Jane Appleseed" class="full-input font-normal darkViolet" maxlength="20">
+          <input type="text" name="cardholder" id="cardholder" onkeypress="return event.charCode >= 97 && event.charCode <= 122 || event.charCode >= 65 &&  event.charCode <= 90 ||  event.charCode == 32 || event.charCode == 39 || event.charCode == 46 || event.charCode == 44 || event.charCode == 96" placeholder="e.g. Jane Appleseed" class="full-input font-normal darkViolet" maxlength="20">
           <small>-</small>
         </div>
         <div style="margin-top: 10px;">
           <label for="cardnumber" class="font-small darkViolet">CARD NUMBER</label>
-          <input type="text" onkeypress="return event.charCode >= 48 && event.charCode <= 57" name="cardnumber" placeholder="e.g 1234 5678 9123 0000" class="full-input font-normal">
+          <input type="text" onkeypress="return event.charCode >= 48 && event.charCode <= 57" name="cardnumber" id="cardnumber" placeholder="e.g 1234 5678 9123 0000" class="full-input font-normal" maxlength="19">
           <small>-</small>
         </div>
         <div class="form-date">
           <div class="form-date-wrap">
             <label for="date" class="font-small darkViolet">EXP DATE (MM/YY)</label>
             <div class="form-date-exp">
-              <input type="text" name="date" placeholder="MM" class="font-normal valueMM" maxlength="2" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
+              <input type="text" name="date" id="date" placeholder="MM" class="font-normal valueMM" maxlength="2" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
               <input type="text" name="date" placeholder="YY" class="font-normal valueYY" maxlength="2" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
             </div>
             <small>-</small>
           </div>
           <div class="form-date-wrap">
             <label for="cvc" class="font-small darkViolet">CVC</label>
-            <input type="text" maxlength="3" placeholder="e.g. 123" class="font-normal cvc" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
+            <input type="text" maxlength="3" placeholder="e.g. 123" id="cvc" class="font-normal cvc" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
             <small>-</small>
           </div>
         </div>
