--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   </style>
 </head>
 <body>
-  <div></div>
-  <div class="container">
+  <div class="container" role="main">
     <div class="container-left">
       <div class="card">
         <div class="front-card">
