--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <style>
     .attribution { font-size: 11px; position: absolute; top: 0; right: 0;}
     .attribution a { color: hsl(228, 45%, 44%); }
+    h1 {display: none;}
   </style>
 </head>
 <body>
+  <h1>Interactive Card Details Form</h1>
   <div class="container" role="main">
     <div class="container-left">
       <div class="card">
