--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h1>Interactive Card Details Form</h1>
+  <h1 role="heading">Interactive Card Details Form</h1>
   <div class="container" role="main">
     <div class="container-left">
       <div class="card">
